<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="20dp"
        android:background="@drawable/bg_top">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_baseline_person_24" />

        <TextView
            android:id="@+id/Name_of_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="19dp"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@+id/profile_image"
            android:layout_toRightOf="@+id/profile_image"
            android:fontFamily="sans-serif-black"
            android:includeFontPadding="false"
            android:text="@string/name_of_user"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/Username_of_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Name_of_user"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="1dp"
            android:layout_toRightOf="@+id/profile_image"
            android:includeFontPadding="false"
            android:text="@string/username_of_the_user"
            android:textColor="#F1DFDF"
            android:textSize="20sp" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <!--Worker name-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/worker_name_complain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_worker_complain_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/name_of_worker_complain" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/worker_id_complain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/worker_id_complain_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:drawablePadding="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/worker_id_complain" />

        </com.google.android.material.textfield.TextInputLayout>



        <!--Complain-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/requirements_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/complain_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:drawableLeft="@drawable/ic_baseline_perm_device_information_24"
                android:drawablePadding="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/complain_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit_complain_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:backgroundTint="#ff4e47"
            android:text="@string/Submit" />

    </LinearLayout>

</LinearLayout>







