<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings"
    tools:openDrawer="star"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/red_gradient_home_background">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/lato_bold"
                android:text="Settings"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="18sp" />

            <RelativeLayout
                android:id="@+id/home_menu_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:background="#00000000">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_baseline_menu_white" />
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewLanguage"
                    android:layout_width="60dp"
                    android:layout_height="47dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/language_content_desc"
                    app:layout_constraintBottom_toBottomOf="@+id/language_opt_desc"
                    app:layout_constraintEnd_toStartOf="@+id/language_opt"
                    app:layout_constraintTop_toTopOf="@id/language_opt"
                    app:srcCompat="@drawable/ic_baseline_language_24" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_marginTop="4dp"
                        android:id="@+id/language_opt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/change_language"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0.4"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.05" />

                    <TextView
                        android:layout_marginTop="3dp"
                        android:id="@+id/language_opt_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/change_language_text"
                        android:textSize="15sp"
                        android:fontFamily="@font/lato"
                        app:layout_constraintStart_toStartOf="@id/language_opt"
                        app:layout_constraintTop_toBottomOf="@id/language_opt" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewDelete"
                    android:layout_width="60dp"
                    android:layout_height="47dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/language_content_desc"
                    app:layout_constraintBottom_toBottomOf="@+id/delete_acc_desc"
                    app:layout_constraintEnd_toStartOf="@+id/delete_acc"
                    app:layout_constraintTop_toTopOf="@id/delete_acc"
                    app:srcCompat="@drawable/ic_baseline_delete_24" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_marginTop="4dp"
                        android:id="@+id/delete_acc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/delete_account"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0.363"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.15" />

                    <TextView
                        android:layout_marginTop="3dp"
                        android:id="@+id/delete_acc_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_acc_text"
                        android:textSize="15sp"
                        android:fontFamily="@font/lato"
                        app:layout_constraintStart_toStartOf="@id/delete_acc"
                        app:layout_constraintTop_toBottomOf="@id/delete_acc" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="350dp"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        app:itemIconTint="#FF6A6A"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"/>
</androidx.drawerlayout.widget.DrawerLayout>