<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KotUserProfileActivity"
    tools:openDrawer="start"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/red_gradient_home_background"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp">

                <RelativeLayout
                    android:id="@+id/home_menu_btn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="-25dp"
                    android:background="#00000000">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_baseline_menu_white" />
                </RelativeLayout>

                <ImageView
                    android:layout_marginEnd="10dp"
                    android:id="@+id/profile_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/home_round_btn_background"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/dummy3" />

                <TextView
                    android:id="@+id/Name_of_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="19dp"
                    android:layout_marginLeft="19dp"
                    android:layout_marginTop="90dp"
                    android:layout_toEndOf="@+id/profile_image"
                    android:layout_toRightOf="@+id/profile_image"
                    android:fontFamily="@font/lato_bold"
                    android:includeFontPadding="false"
                    android:text="Username"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/Username_of_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Name_of_user"
                    android:layout_marginLeft="19dp"
                    android:layout_marginTop="1dp"
                    android:layout_toRightOf="@+id/profile_image"
                    android:includeFontPadding="false"
                    android:text="@string/username_of_the_user"
                    android:fontFamily="@font/lato"
                    android:textColor="#F1DFDF"
                    android:textSize="18sp" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-95dp"
                android:padding="15dp">

                <!--For Payment-->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="125dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/homered"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/price"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerHorizontal="true"
                            android:layout_margin="8dp"
                            android:src="@drawable/ic_baseline_payment_24" />

                        <TextView
                            android:id="@+id/payment_price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/price"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="sans-serif-black"
                            android:gravity="center_horizontal"
                            android:includeFontPadding="false"
                            android:text="Rs 15000/M"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/payment_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/payment_price"
                            android:layout_centerHorizontal="true"
                            android:includeFontPadding="false"
                            android:text="Expected"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp" />

                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>

                <!--Time-->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="125dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/homered"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/timer"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerHorizontal="true"
                            android:layout_margin="8dp"
                            android:src="@drawable/ic_baseline_access_time_24"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/timer"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="sans-serif-black"
                            android:includeFontPadding="false"
                            android:text="@string/full_time"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/work_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/duration"
                            android:layout_centerHorizontal="true"
                            android:includeFontPadding="false"
                            android:text="@string/_9am_7pm"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp" />

                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:orientation="vertical"
                android:padding="15dp">

                <!--Address-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Address"
                    android:layout_marginStart="35dp"
                    android:textSize="16sp"
                    android:textColor="@color/homered"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/lato"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_marginEnd="15dp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_baseline_home_work_24"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                       android:textSize="18sp"
                        android:fontFamily="@font/lato"
                        android:text="@string/_1251_w_university_ave_flagstaff_arkansas_86001_uk" />

                </LinearLayout>

                <View
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ecedea"/>


                <!--Email-->


                <TextView
                    android:textColor="@color/homered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:layout_marginStart="35dp"
                    android:textSize="16sp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/lato"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_marginEnd="15dp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_baseline_email_24"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:textSize="18sp"
                        android:fontFamily="@font/lato"
                        android:text="@string/abc52_gmail_com" />
                </LinearLayout>
                <View
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ecedea"/>



                <!--Contact-->
                <TextView
                    android:textColor="@color/homered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Contact"
                    android:layout_marginStart="35dp"
                    android:textSize="16sp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/lato"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_marginEnd="15dp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_baseline_add_ic_call_24"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:fontFamily="@font/lato"
                        android:textSize="18sp"
                        android:text="@string/_91_54875_25698" />

                </LinearLayout>
                <View
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ecedea"/>


                <!--Requirements-->

                <TextView
                    android:textColor="@color/homered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Requirements"
                    android:layout_marginStart="35dp"
                    android:textSize="16sp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/lato"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_marginEnd="15dp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_baseline_perm_device_information_24"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:textSize="18sp"
                        android:fontFamily="@font/lato"
                        android:text="@string/in_search_of_an_experienced_househelper_who_can_manage_baby_sitting_as_well_as_household_chores" />

                </LinearLayout>
                <View
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ecedea"/>




            </LinearLayout>

        </LinearLayout>
    </ScrollView>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:background="@drawable/feedback_btn_background"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="UPDATE"
                android:textColor="#fff"
                android:textSize="18sp" />

        </RelativeLayout>

    </RelativeLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:itemIconTint="#FF6A6A"
        app:menu="@menu/nav_menu" />


</androidx.drawerlayout.widget.DrawerLayout>







